# Tetris

./: README.md
tetrie_template/: main.cpp
tetris/: README.md
tetris/tetris_template/: CMakeLists.txt
tetris_10_25/: CMakeLists.txt  main.cpp
tetris_10_25/inc/: Board.h  Game.h  Settings.h  Tetrominoes.h  Vec2.h  rayLibcpp.h
tetris_10_25/src/: Board.cpp  Game.cpp  Tetrominoes.cpp  rayLibcpp.cpp
